# mc_vive_plugin

./: CMakeLists.txt  README.md  vcpkg.json
include/mc_vive_plugin/: ViveData.h
src/: VivePlugin.cpp  VivePlugin.h  VivePluginData.h
tests/etc/: mc_rtc.yaml
